--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <img src="src/assets/image/headshot-transparent.png" width="300">
 
           <p class="intro-text">
-            Yep, I'm another self-taught developer here
+            Yep, another developer in this oversaturated market.
 
             — <a id="svk">SvelteKit</a>, <a id="next">Next.js</a>, <a
               id="solid">Solid.js</a>, <a id="stl">Streamlit</a>, and <a
@@ -174,9 +174,10 @@
         </p>
 
         <p class="text-bubble bot">
-          <span class="text-cont bot loading">
-            <div class="dot-flashing"></div>
+          <span class="text-cont bot">
+            <span class="loader"> </span>
           </span>
+
         </p>
 
       </div>
