--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AYO! IT'S PUVISH!</title>
   </head>
-  <body id="root">
+<!--   <body id="root">
     <script type="module" src="/src/index.jsx"></script>
-  </body>
+  </body> -->
+  <body style="border: none; margin: 0; padding: 0;">
+
+    <iframe src="https://pvshkng-github-io.vercel.app/"
+        style="width: 100%; height: 100vh; border: none; margin: 0; padding: 0;"></iframe>
+
+</body>
 </html>
