--- a/index.html
+++ b/index.html
@@ -1,18 +1,47 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AYO! IT'S PUVISH!</title>
-  </head>
-<!--   <body id="root">
-    <script type="module" src="/src/index.jsx"></script>
-  </body> -->
-  <body style="border: none; margin: 0; padding: 0;">
 
-    <iframe src="https://pvshkng-github-io.vercel.app/"
-        style="width: 100%; height: 100vh; border: none; margin: 0; padding: 0;"></iframe>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AYO! IT'S PUVISH!</title>
 
+  <style>
+    body {
+      margin: 0
+    }
+
+    .iframe-container {
+      position: relative;
+      overflow: hidden;
+      width: 100%;
+      height: 100vh;
+
+    }
+
+
+    .iframe-container iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+
+      margin: 0;
+
+      padding: 0;
+
+      overflow: auto;
+
+    }
+  </style>
+
+</head>
+
+<body class="iframe-container">
+  <iframe src="https://pvshkng-github-io.vercel.app/"></iframe>
 </body>
+
 </html>
