--- a/secret/index.html
+++ b/secret/index.html
@@ -7,7 +7,7 @@
     </head>
     <body style="border: none; margin: 0; padding: 0;">
 
-        <iframe src="https://pvshkng-github-io-api.vercel.app/"
+        <iframe src="https://pvshkng-github-io.vercel.app/"
             style="width: 100%; height: 100vh; border: none; margin: 0; padding: 0;"></iframe>
 
     </body>
