fix iframe targete

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </head>
 
 <body class="iframe-container">
-  <iframe src="https://pvshkng-github-io.vercel.app/"></iframe>
+  <iframe src="https://pvshkng.vercel.app/"></iframe>
 </body>
 
 </html>
