--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AYO! IT'S PUVISH!</title>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>AYO! IT'S PUVISH!</title>
 
-  <style>
+    <style>
     body {
       margin: 0
     }
@@ -16,32 +16,27 @@
       position: relative;
       overflow: hidden;
       width: 100%;
-      height: 100vh;
-
+      order: none;
+      margin: 0; 
+      padding: 0;
     }
 
 
     .iframe-container iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
+
       width: 100%;
       height: 100%;
       border: none;
-
       margin: 0;
-
       padding: 0;
-
-      overflow: auto;
 
     }
   </style>
 
-</head>
+  </head>
 
-<body class="iframe-container">
-  <iframe src="https://pvshkng.vercel.app/"></iframe>
-</body>
+  <body class="iframe-container">
+    <iframe src="https://pvshkng.vercel.app/"></iframe>
+  </body>
 
 </html>
