--- a/secret/index.html
+++ b/secret/index.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>My other pages</title>
     </head>
-    <body style="border: none; margin: 0; padding: 0;">
+    <body
+        style="width: 100%; height: 100vh; border: none; margin: 0; padding: 0;">
 
         <iframe src="https://pvshkng.vercel.app/"
             style="width: 100%; height: 100vh; border: none; margin: 0; padding: 0;"></iframe>
