--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       position: relative;
       overflow: hidden;
       width: 100%;
+      height: 100%;
       order: none;
       margin: 0; 
       padding: 0;
