--- a/index.html
+++ b/index.html
@@ -3,41 +3,28 @@
 
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AYO! IT'S PUVISH!</title>
-
-    <style>
-    body {
-      margin: 0
-    }
-
-    .iframe-container {
-      position: relative;
-      overflow: hidden;
-      width: 100%;
-      height: 100%;
-      order: none;
-      margin: 0; 
-      padding: 0;
-    }
-
-
-    .iframe-container iframe {
-
-      width: 100%;
-      height: 100%;
-      border: none;
-      margin: 0;
-      padding: 0;
-
-    }
-  </style>
-
-  </head>
-
-  <body class="iframe-container">
-    <iframe src="https://pvshkng.vercel.app/"></iframe>
-  </body>
-
+      <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+        iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
+</head>
+<body>
+    <iframe src="https://pvshkng.vercel.app" frameborder="0"></iframe>
+</body>
 </html>
