--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AYO! IT'S PUVISH!</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
       <style>
         body, html {
             margin: 0;
